[tool.poetry]
name = "aiocqlengine"
version = "0.3.0"
description = "Async wrapper for cqlengine of cassandra python driver."
authors = ["Darren <charact3@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
cassandra-driver = "^3.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.8"
pylava = "^0.2.2"
yapf = "^0.28.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
